--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
             <version>2.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+            <version>5.5.0</version> <!-- use a version that matches your Spring Boot version -->
+        </dependency>
+
+
+
+
+
 
 
 
